--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,9 @@
     <!-- build:css(.tmp) styles/pf.css -->
     <link rel="stylesheet" href="styles/pf.css">
     <!-- endbuild -->
+    <!-- build:css(.tmp) styles/blog.css -->
+    <link rel="stylesheet" href="styles/blog.css">
+    <!-- endbuild -->
     <!-- build:css(.tmp) styles/sns.css -->
     <link rel="stylesheet" href="styles/sns.css">
     <!-- endbuild -->
@@ -26,45 +29,14 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <!-- Add your site or application content here -->
-    <div class="header">
-      <div class="navbar navbar-default" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
-
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-
-            <a class="navbar-brand" href="#/">Portfolio</a>
-          </div>
-
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/sns">Sns</a></li>
-              <li><a ng-href="#/">Contact</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="full-container">
     <div ng-view=""></div>
-    </div>
+
 
     <div class="footer">
       <div class="container">
         <p>copyright ⓒ 2016 <a href="http://semjok.com" target="_blank">SEMJOK</a> All Rights Reserved</p>
       </div>
     </div>
-
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
@@ -95,8 +67,10 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/controllers/common.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/blog.js"></script>
         <script src="scripts/controllers/sns.js"></script>
         <!-- endbuild -->
 </body>
